#+TITLE: CHANGELOG

* entrusted-0.2.6 (UNRELEASED)

- bugfix: Intermittent failures in batch conversions due to container process crashes
- enhancement: More predictable PDF quality and PDF result size
- enhancement: Define a tailored security profile for the container solution
- enhancement: Display overall progress information and final status summary
- enhancement: Add "clickable" hyperlinks in few dialogs (project and release URLs)
- maintenance: Look and feel consistency improvements (Desktop and "Online Service" interfaces)
- maintenance: Web framework change from [[https://actix.rs/][actix_web]] to [[https://github.com/tokio-rs/axum][axum]] for the "Online Service"
- maintenance: Release pipeline improvements towards more reproducible builds
- documentation: Testing notes with a focus on Linux arm64 testing from amd64 machines

* entrusted-0.2.5

- [[https://en.wikipedia.org/wiki/AArch64][aarch64/arm64]] support for Linux and Mac OS, as well as the container image
- Small bug fixes for temporary folders handling
- New button in the Desktop client to manually check for updates

* entrusted-0.2.4

- Hide Microsoft Windows command prompts displayed upon conversion (Issue 7)
- Mitigate false positives while changing file modification dates on Windows (Issue 7)
- Remove UNIX/Linux specific code in the "online service" (entrusted-webserver component)
- Improve user interface "responsiveness" with better decoupling of background tasks

* entrusted-0.2.3

- Provide DEB and RPM packages for convenience (tested on recent Ubuntu and Fedora versions so far)
- Mitigate inability to run the program on Fedora (SELinux related problems with container volumes)
- Address erroneous progress information in early conversions stages
- Fix occasional file deletion bug (select and delete from the conversion queue)

* entrusted-0.2.1

- Mitigate conversion failures for Office documents (errors while exiting container with an exit code 139)