@@ -3,6 +3,7 @@
 * entrusted-0.2.6 (UNRELEASED)
 
 - bugfix: Intermittent failures in batch conversions due to container process crashes
+- bugfix: Permission denied errors at the end of conversions, under Linux with Docker
 - enhancement: More predictable PDF quality and PDF result size
 - enhancement: Define a tailored security profile for the container solution
 - enhancement: Display overall progress information and final status summary
